@@ -704,6 +704,7 @@ collection_literal returns [Term.Raw value]
 value returns [Term.Raw value]
     : c=constant           { $value = c; }
     | l=collection_literal { $value = l; }
+    | K_NULL               { $value = Constants.NULL_LITERAL; }
     | QMARK                { $value = new AbstractMarker.Raw(++currentBindMarkerIdx); }
     ;
 
@@ -960,6 +961,8 @@ K_VARINT:      V A R I N T;
 K_TIMEUUID:    T I M E U U I D;
 K_TOKEN:       T O K E N;
 K_WRITETIME:   W R I T E T I M E;
+
+K_NULL:        N U L L;
 
 K_MAP:         M A P;
 K_LIST:        L I S T;
